--- a/_posts/DOATOUV/2017-01-25-EnergyPlus-5df6da2034ca72c768570b6a0b245515384f5ac5-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
+++ b/_posts/DOATOUV/2017-01-25-EnergyPlus-5df6da2034ca72c768570b6a0b245515384f5ac5-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-5df6da2034ca72c768570b6a0b245515384f5ac5-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-5df6da2034ca72c768570b6a0b245515384f5ac5-x86_64-Linux-Ubuntu-14.04-custom_check.html
 tags: data
 layout: ci_results
-date: '2017-01-25 03:10:22'
+date: '2017-01-25 03:11:16'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-custom_check
-pending: true
+pending: false
 analyze_only: true
-build_time: 
-test_time: 
+build_time: 1.100972886
+test_time: 1.017975128
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -71,7 +71,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-5df6da2034ca72c768570b6a0b245515384f5ac5-x86_64-Linux-Ubuntu-14.04-custom_check.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-01-25 03:10:22",
+    "date": "2017-01-25 03:11:16",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -97,10 +97,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-custom_check",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 1.100972886,
+    "test_time": 1.017975128,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
