--- a/_posts/138352587-I-5638/2017-01-25-EnergyPlus-14e9219508bef10776c01b53738d9a7360d531df-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
+++ b/_posts/138352587-I-5638/2017-01-25-EnergyPlus-14e9219508bef10776c01b53738d9a7360d531df-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-14e9219508bef10776c01b53738d9a7360d531df-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-14e9219508bef10776c01b53738d9a7360d531df-x86_64-Linux-Ubuntu-14.04-custom_check.html
 tags: data
 layout: ci_results
-date: '2017-01-25 22:36:49'
+date: '2017-01-25 22:51:05'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-custom_check
-pending: true
+pending: false
 analyze_only: true
-build_time: 
-test_time: 
+build_time: 1.093251314
+test_time: 1.016015183
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -71,7 +71,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-14e9219508bef10776c01b53738d9a7360d531df-x86_64-Linux-Ubuntu-14.04-custom_check.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-01-25 22:36:49",
+    "date": "2017-01-25 22:51:05",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -97,10 +97,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-custom_check",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 1.093251314,
+    "test_time": 1.016015183,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
