--- a/_posts/kiva/2017-01-25-EnergyPlus-27581cf9e9e9ce8922bf981bd5023e9a76be6b18-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61-results.html
+++ b/_posts/kiva/2017-01-25-EnergyPlus-27581cf9e9e9ce8922bf981bd5023e9a76be6b18-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61-results.html
@@ -3,10 +3,10 @@ title: EnergyPlus-27581cf9e9e9ce8922bf981bd5023e9a76be6b18-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-27581cf9e9e9ce8922bf981bd5023e9a76be6b18-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61.html
 tags: data
 layout: ci_results
-date: '2017-01-25 23:35:46'
+date: '2017-01-25 23:39:25'
 unhandled_failure: false
-build_error_count: 0
-build_warning_count: 0
+build_error_count: 3
+build_warning_count: 44
 package_error_count: 0
 package_warning_count: 0
 test_count: 0
@@ -29,9 +29,9 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-cppcheck-1.61
-pending: true
+pending: false
 analyze_only: true
-build_time: 
+build_time: 169.585207669
 test_time: 
 package_time: 
 install_time: 
@@ -57,7 +57,335 @@ performance_test_count: 0
 ---
 {
   "build_results": [
-
+    {
+      "filename": "third_party/eigen-3.3.2/bench/benchmark-blocking-sizes.cpp",
+      "linenumber": "382",
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "Resource leak: file"
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/bench/tensors/benchmark.h",
+      "linenumber": "23",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Member variable 'Benchmark::name_' is not initialized in the constructor."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/bench/tensors/benchmark.h",
+      "linenumber": "23",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Member variable 'Benchmark::fn_' is not initialized in the constructor."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/bench/tensors/benchmark.h",
+      "linenumber": "23",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Member variable 'Benchmark::fn_range_' is not initialized in the constructor."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/bench/tensors/benchmark.h",
+      "linenumber": "26",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Member variable 'Benchmark::name_' is not initialized in the constructor."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/bench/tensors/benchmark.h",
+      "linenumber": "26",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Member variable 'Benchmark::fn_' is not initialized in the constructor."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/bench/tensors/benchmark.h",
+      "linenumber": "26",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Member variable 'Benchmark::fn_range_' is not initialized in the constructor."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/demos/mandelbrot/mandelbrot.h",
+      "linenumber": "29",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Member variable 'MandelbrotThread::total_iter' is not initialized in the constructor."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/demos/mandelbrot/mandelbrot.h",
+      "linenumber": "29",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Member variable 'MandelbrotThread::max_iter' is not initialized in the constructor."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/demos/mandelbrot/mandelbrot.h",
+      "linenumber": "29",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Member variable 'MandelbrotThread::single_precision' is not initialized in the constructor."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/demos/opengl/quaternion_demo.cpp",
+      "linenumber": "197",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Member variable 'RenderingWidget::m_alpha' is not initialized in the constructor."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/demos/opengl/trackball.h",
+      "linenumber": "23",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Member variable 'Trackball::mMode' is not initialized in the constructor."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/demos/opengl/trackball.h",
+      "linenumber": "23",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Member variable 'Trackball::mLastPointOk' is not initialized in the constructor."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/failtest/failtest_sanity_check.cpp",
+      "linenumber": "2",
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "No pair for character ('). Can't process file. File is either invalid or unicode, which is currently not supported."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/test/ctorleak.cpp",
+      "linenumber": "11",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Member variable 'Foo::dummy' is not initialized in the constructor."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/test/eigensolver_generic.cpp",
+      "linenumber": "124",
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "Passing value -1. to sqrt() leads to undefined result."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/test/exceptions.cpp",
+      "linenumber": "103",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \" no exception thrown in \" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/test/exceptions.cpp",
+      "linenumber": "103",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"memory leak detected in \" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/test/exceptions.cpp",
+      "linenumber": "104",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"memory leak detected in \" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/test/exceptions.cpp",
+      "linenumber": "104",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \" no exception thrown in \" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/test/exceptions.cpp",
+      "linenumber": "105",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \" no exception thrown in \" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/test/exceptions.cpp",
+      "linenumber": "105",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"memory leak detected in \" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/test/exceptions.cpp",
+      "linenumber": "107",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"global memory leak detected in \" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/test/product_extra.cpp",
+      "linenumber": "316",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Redundant code: Found a statement that begins with numeric constant."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/cxx11_tensor_custom_index.cpp",
+      "linenumber": "27",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Redundant code: Found a statement that begins with numeric constant."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/cxx11_tensor_custom_index.cpp",
+      "linenumber": "49",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Redundant code: Found a statement that begins with numeric constant."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "238",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "239",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "240",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "241",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "242",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "243",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "244",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "245",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "246",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "273",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "274",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "275",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "276",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "277",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "278",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "300",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "301",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "302",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "325",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "326",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    },
+    {
+      "filename": "third_party/eigen-3.3.2/unsupported/test/openglsupport.cpp",
+      "linenumber": "327",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Conversion of string literal \"uniform not found\" to bool always evaluates to true."
+    }
   ],
   "test_results": [
 
@@ -71,10 +399,10 @@ performance_test_count: 0
     "permalink": "EnergyPlus-27581cf9e9e9ce8922bf981bd5023e9a76be6b18-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-01-25 23:35:46",
+    "date": "2017-01-25 23:39:25",
     "unhandled_failure": false,
-    "build_error_count": 0,
-    "build_warning_count": 0,
+    "build_error_count": 3,
+    "build_warning_count": 44,
     "package_error_count": 0,
     "package_warning_count": 0,
     "test_count": 0,
@@ -97,9 +425,9 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-cppcheck-1.61",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
+    "build_time": 169.585207669,
     "test_time": null,
     "package_time": null,
     "install_time": null,
