--- a/_posts/GDU/2017-01-26-EnergyPlus-9fd1b64f83ab64979f2e0c50a78b9d950df54bbf-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61-results.html
+++ b/_posts/GDU/2017-01-26-EnergyPlus-9fd1b64f83ab64979f2e0c50a78b9d950df54bbf-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-9fd1b64f83ab64979f2e0c50a78b9d950df54bbf-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-9fd1b64f83ab64979f2e0c50a78b9d950df54bbf-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61.html
 tags: data
 layout: ci_results
-date: '2017-01-26 02:02:04'
+date: '2017-01-26 02:05:42'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,9 +29,9 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-cppcheck-1.61
-pending: true
+pending: false
 analyze_only: true
-build_time: 
+build_time: 165.529213378
 test_time: 
 package_time: 
 install_time: 
@@ -71,7 +71,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-9fd1b64f83ab64979f2e0c50a78b9d950df54bbf-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-01-26 02:02:04",
+    "date": "2017-01-26 02:05:42",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -97,9 +97,9 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-cppcheck-1.61",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
+    "build_time": 165.529213378,
     "test_time": null,
     "package_time": null,
     "install_time": null,
