--- a/_posts/BI-5020/2017-02-02-EnergyPlus-22ce0289b5a29f4bbe70e985766013a9ec093ec5-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61-results.html
+++ b/_posts/BI-5020/2017-02-02-EnergyPlus-22ce0289b5a29f4bbe70e985766013a9ec093ec5-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-22ce0289b5a29f4bbe70e985766013a9ec093ec5-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-22ce0289b5a29f4bbe70e985766013a9ec093ec5-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61.html
 tags: data
 layout: ci_results
-date: '2017-02-02 15:01:41'
+date: '2017-02-02 15:06:02'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,9 +29,9 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-cppcheck-1.61
-pending: true
+pending: false
 analyze_only: true
-build_time: 
+build_time: 205.012288389
 test_time: 
 package_time: 
 install_time: 
@@ -71,7 +71,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-22ce0289b5a29f4bbe70e985766013a9ec093ec5-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-02-02 15:01:41",
+    "date": "2017-02-02 15:06:02",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -97,9 +97,9 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-cppcheck-1.61",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
+    "build_time": 205.012288389,
     "test_time": null,
     "package_time": null,
     "install_time": null,
